--- a/Css/style.css
+++ b/Css/style.css
@@ -367,7 +367,7 @@ template {
   display: none;
 }
 body {
-  font-family: Roboto, "游ゴシック", YuGothic, "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", Arial, "メイリオ", Meiryo, sans-serif;
+  font-family: Roboto,  YuGothic, "Yu Gothic", "Hiragino Kaku Gothic ProN", Arial, Meiryo, sans-serif;
   color: #525263;
   transition: z-index 0ms 5.28455ms;
   background: #f6f6f6;
@@ -4410,7 +4410,7 @@ Styleguide 11.2.1
   .ec-headerTitle *::after {
     box-sizing: inherit; }
 .ec-headerTitle img {
-    width: 100%; }
+    width: 55%; }
 .ec-headerTitle .ec-headerTitle__title {
     text-align: center; }
 .ec-headerTitle .ec-headerTitle__title h1 {
